--- a/index.html
+++ b/index.html
@@ -53,21 +53,27 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <h1 class="w3-jumbo" style="display:block;width:100%;margin:auto;"><b>Jodie Wiggins</b></h1>
     <br>
     <p style="display:block;width:100%;margin:auto;font-size:large">
-      I'm an teacher-scholar discovering the depths of my passion for breaking down barriers between knowledge and people more every day.
+      I am a teacher-scholar daily discovering the depths of my passion for breaking down barriers between people and knowledge.
     </p>
 
     <br>
 
     <p style="display:block;width:100%;margin:auto;font-size:large">
-      I've developed and maintain several science education websites (see projects) and have the privilege to teach biology
-      courses at Oklahoma State University (see teaching).
+      I've developed and maintain several science education websites (see <a href="./research_page.html">projects</a>) and have the privilege to teach biology
+      courses at Oklahoma State University (see <a href="./teaching_page.html">teaching</a>).
     </p>
 
     <br>
 
     <p style="display:block;width:100%;margin:auto;font-size:large">
-      In my research, I use the power of genetics and genomics to learn about mating system evolution. Currently, I'm working on projects exploring the genetics of sex reversal and pterin-based color in reptiles (see projects).
+      In my research, I use the power of genetics and genomics to learn about mating system evolution. Currently, I'm working on projects exploring the genetics of sex reversal and pterin-based color in non-avian reptiles (see <a href="./research_page.html">projects</a>).
     </p>
+
+    <br>
+
+    <p style="display:block;width:100%;margin:auto;font-size:large">
+      You can learn more about my education and experience on my <a href="./people_page.html">about me</a> page and find links to my research and teaching resources on my <a href="./resources_page.html">resources</a> page.
+    
 
 
 
