--- a/resources_page.html
+++ b/resources_page.html
@@ -172,6 +172,23 @@
   </div>
 
   </div>
+  <!-- Row 3 -->
+  <div class="w3-row-padding w3-center w3-margin-top">
+    <br>
+    <br>
+    <!-- Student Resources -->
+    <div class="half">
+      <div class="card container">
+        <h3> STUDENT RESOURCES</h3>
+        <hr>
+        <p>Potentially helpful learning resources for students</p>
+        <hr>
+      <h5><a
+          href="https://lib.uwaterloo.ca/web/assignment-planner"
+          target="_blank">Assignment Planner </a> that breaks down research and writing projects into manageable steps based on the due date - University of Waterloo</h5>
+      <hr>
+  </div>
+  </div>
   <!-- Next topic 
   <div class="half">
     <div class="card container">
