add teaching philosophy

--- a/research_page.html
+++ b/research_page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Projecs</title>
+<title>Projects</title>
 <meta content="text/html; charset=iso-8859-2" http-equiv="Content-Type">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -98,7 +98,7 @@
 
 <!-- About -->
 <hr>
-<div style="margin-left:20%" class="footer">
+<div class="footer">
   <a href="https://www.linkedin.com/in/jodie-wiggins-b77257149/">
     <img src="img/linkedin.png" alt="LinkedIn logo" style="width: 40px; height 40px; padding-right: 10px;">
   </a>
