--- a/teaching_page.html
+++ b/teaching_page.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <title>Teaching</title>
-<meta charset="UTF-8">
+<meta content="text/html; charset=iso-8859-2" http-equiv="Content-Type">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="website.css">
+
 <body>
 
 <!-- Teaching -->
@@ -23,15 +24,20 @@
   </div>
 </div>
 <hr>
+
+<br>
 <!-- Quote -->
-<div class="w3-container w3-padding-32" id="quote">
+<div>
+<div class="w3-container" id="quote">
   <h2> "There is no knowledge that is not power" </h2>
   <h4> - Ralph Waldo Emerson </h4>
 </div>
 
 <!-- Course List -->
-<div class="w3-container w3-padding-32" id="courses">
-  <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Courses</h3>
+<hr>
+<div class="w3-container" id="courses">
+  <h3>Courses</h3>
+  <hr>
   <p>In various semesters I teach or have taught:
   </p>
   <p>
@@ -49,23 +55,38 @@
 </div>
 
 <!-- YouTube -->
-<div class="w3-container w3-padding-32" id="youtube">
-  <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">You can find some of my instructional videos on my <a href="https://www.youtube.com/channel/UC7Y9-6ZkIaUZk_kK31sNMHA" target="blank">YouTube channel</a></h3>
+<hr>
+<div class="w3-container" id="youtube">
+  <h4> <a href="https://www.youtube.com/channel/UC7Y9-6ZkIaUZk_kK31sNMHA" target="blank">YouTube channel</a></h4>
+
+  <p>Where you can find some of my instructional videos</p>
 </div>
 
 <!-- Teaching Resources -->
-<div class="w3-container w3-padding-32" id="courses">
+<hr>
+<div class="w3-container" id="courses">
   <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Teaching Resources</h3>
   <p>Find a full list of teaching resources on the <a href="https://jwiggi18.github.io/resources_page.html" target="blank">resources page</a>.
   </p>
 </div>
+
+<!-- Teaching Philosophy -->
+<hr>
+<div class="w3-container" id="philosophy">
+  <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Teaching Philosophy</h3>
+  <iframe type="text/html" src="https://wigginstemplate.blogspot.com/2023/01/course-structure-rationale.html" width="100%" height="500" >
+</div>
+
+</div>
+
+</body>
 <!-- End page content -->
 
 
 
 <!-- About -->
 <hr>
-<div style="margin-left:20%" class="footer">
+<div class="footer">
   <a href="https://www.linkedin.com/in/jodie-wiggins-b77257149/">
     <img src="img/linkedin.png" alt="LinkedIn logo" style="width: 40px; height 40px; padding-right: 10px;">
   </a>
@@ -81,5 +102,5 @@
   </p>
 </div>
 
-</body>
+
 </html>
